# notepack

./: .gitignore  Cargo.toml  README.md  SPEC.md  justfile
.github/workflows/: ci.yaml
benches/: by_kind.rs  codec.rs  contacts.json  helpers.rs
benches/by_kind/: kind_0_metadata.jsonl  kind_10002_relays.jsonl  kind_1059_giftwrap.jsonl  kind_1_notes.jsonl  kind_30023_article.jsonl  kind_3_follows.jsonl  kind_5_deletion.jsonl  kind_6_repost.jsonl  kind_7_reaction.jsonl  kind_9735_zap.jsonl
examples/: roundtrip_sample.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: notepack_decode_string.rs  notepack_encoder.rs  notepack_parser.rs
src/: error.rs  lib.rs  main.rs  note.rs  parser.rs  stringtype.rs  varint.rs
tests/: roundtrip.rs  spec_vectors.rs
